<resources>
    <string name="app_name">Siandalan</string>
    <string name="notification_channel_id" translatable="false">"id.siandalan.app"</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Permohonan</string>
    <string name="title_content_description">ImageView</string>
    <string name="title_dashboard_new_request">Pengajuan Baru</string>
    <string name="title_dashboard_onprogress">Sedang Proses</string>
    <string name="title_dashboard_verified">Terverifikasi</string>
    <string name="title_dashboard_draft_approval">Draft Persetujuan</string>
    <string name="title_dashboard_done">Sudah Selesai</string>
    <string name="title_dashboard_pending">Pending</string>
    <string name="title_section_approval">PERMOHONAN</string>
    <string name="title_section_chart">CHART</string>
    <string name="title_chart_legend_request">Permohonan</string>
    <string name="title_chart_legend_progress">Sedang proses</string>
    <string name="title_chart_legend_draft">Draft SK</string>
    <string name="title_chart_legend_approved">Disetujui</string>
    <string name="title_chart_legend_done">Sudah Selesai</string>
    <string name="title_chart_legend_pending">Pending</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login">Login</string>
    <string name="title_email">NIP</string>
    <string name="title_input_email">Masukkan username (NIP)</string>
    <string name="title_password">Password</string>
    <string name="title_input_password">Password</string>
    <string name="title_try_again">Coba Lagi</string>
    <string name="title_error">Terjadi Kesalahan</string>
    <string name="title_error_des">Silakan untuk coba lagi nanti</string>
    <string name="title_profile">Profile</string>
    <string name="title_general">General</string>
    <string name="title_general_subtitle">Role, Username, Pangkat, Jabatan</string>
    <string name="title_settings">Settings</string>
    <string name="title_settings_subtitle">Nama, Pangkat, Jabatan, Password</string>
    <string name="title_logout">Konfirmasi Log out</string>
    <string name="title_logout_subtitle">Keluar dari aplikasi</string>
    <string name="title_choose_module">Pilih Module</string>
    <string name="title_module">Module</string>
    <string name="title_show_module">Tampilkan Module</string>
    <string name="title_logout_des">Apakah anda yakin ingin melakukan Log out dari aplikasi Siandalan?</string>
    <string name="title_no">Tidak</string>
    <string name="title_yes">Ya</string>
    <string name="title_show_more">Lihat Lebih Banyak</string>
    <string name="title_show_less">Lihat Lebih Sedikit</string>
    <string name="title_status">Status</string>
    <string name="title_no_request">No Pengajuan</string>
    <string name="title_name_request">Pemohon/Perusahaan</string>
    <string name="title_project_name">Nama Proyek</string>
    <string name="title_bangkitan">Bangkitan</string>
    <string name="title_consultant">Konsultan</string>
    <string name="title_date_request">Tanggal Pengajuan</string>
    <string name="title_no_internet_connection">Tidak Ada Koneksi Internet</string>
    <string name="title_pie_chart">Pie Chart</string>
    <string name="title_bar_chart">Bar Chart</string>
    <string name="title_remember_me">Ingat Saya</string>
    <string name="title_forgot_password">Lupa Password</string>
    <string name="title_welcome">Selamat Datang di Si Andalan</string>
    <string name="title_welcome_content">Aplikasi Si Andalan adalah sebuah sistem pelayanan yang digunakan untuk membantu proses perizinan persetujuan Analisis Dampak Lalu Lintas (ANDALALIN) di lingkungan Kementerian Perhubungan.</string>
    <string name="title_data_pengajuan">DATA PENGAJUAN</string>
    <string name="title_detail_nib">NIB/NIK/SATKER</string>
    <string name="title_detail_name">Nama Perseroan</string>
    <string name="title_detail_email">Email</string>
    <string name="title_detail_phone">Telepon</string>
    <string name="title_detail_nama_pimpinan">Nama Pimpinan</string>
    <string name="title_detail_position">Jabatan</string>
    <string name="title_detail_data_pengajuan">Data Pengajuan Andalin</string>
    <string name="title_detail_data_pemohon">Data Pemohon</string>
    <string name="title_detail_category">Kategori</string>
    <string name="title_detail_sub_category">Sub Kategori</string>
    <string name="title_detail_ukuran_kapasitas">Ukuran/Kapasitas</string>
    <string name="title_detail_klarifikasi">Klarifikasi</string>
    <string name="title_detail_kapasitas_rill">Kapasitas Rill</string>
    <string name="title_detail_nama_proyek">Nama Proyek</string>
    <string name="title_detail_pembangunan">Pembangunan/Pengembangan</string>
    <string name="title_detail_alamat_proyek">Alamat Proyek</string>
    <string name="title_detail_provinsi">Provinsi</string>
    <string name="title_detail_kota">Kota</string>
    <string name="title_detail_no_surat_permohonan">No. Surat Permohonan</string>
    <string name="title_detail_tgl_surat_permohonan">Tanggal Surat Permohonan</string>
    <string name="title_detail_klasifikasi">Klasifikasi</string>
    <string name="title_detail_daftar_document_info">PERSYARATAN ADMINISTRATIF PERSETUJUAN ANDALIN</string>
    <string name="title_pembayaran_pnbp">PEMBAYARAN PNBP</string>
    <string name="title_detail_no_siandalin">No. Andalin</string>
    <string name="title_detail_harga">Harga</string>
    <string name="title_detail_kode_billing">Kode Billing</string>
    <string name="title_detail_tanggal_pembayaran">Tanggal Pembayaran</string>
    <string name="title_sk_andalan">SK ANDALAN</string>
    <string name="title_revise">Revisi</string>
    <string name="title_revise_enter">Silakan masukkan revisi</string>
    <string name="title_approve">Approve</string>
    <string name="title_empty">Data Tidak Tersedia</string>
    <string name="title_empty_des">Data mungkin belum terbaru, silakan tekan tombol reload</string>
    <string name="title_daftar_dokumen">DAFTAR DOKUMEN</string>
    <string name="title_revise_success">Revisi Telah Berhasil di Kirim</string>
    <string name="title_ttd_success">Tanda Tangan Telah Berhasil di Kirim</string>
    <string name="title_oke">OKE</string>
    <string name="title_approve_success">Berhasil Di Approve</string>
    <string name="title_detail_kuitansi">KUITANSI</string>
    <string name="title_detail_invoice">INVOICE</string>
    <string name="title_tanda_tangan">Tanda Tangan</string>
    <string name="title_bsre">BSRE Passphrase</string>
    <string name="title_bsre_enter">Silakan masukkan BSRE</string>
</resources>