<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.siandalan.app.features.home.presentation.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_request"
        android:name="id.siandalan.app.features.request.presentation.RequestFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_request" >
        <action
            android:id="@+id/action_navigation_request_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/anim_slide_in_right"
            app:exitAnim="@anim/anim_slide_out_left"
            app:popEnterAnim="@anim/anim_slide_in_left"
            app:popExitAnim="@anim/anim_slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="id.siandalan.app.features.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/detailFragment"
        android:name="id.siandalan.app.features.detail.presentation.DetailFragment"
        android:label="DetailFragment"
        tools:layout="@layout/fragment_detail"/>

</navigation>