<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".features.login.presentation.LoginActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title_email"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="@dimen/_0sdp"
        app:boxStrokeWidthFocused="@dimen/_0sdp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:maxLength="20"
            android:singleLine="true"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/poppins_regular"
            android:textColorHint="@color/grey"
            android:paddingStart="@dimen/_24sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:textSize="@dimen/_16ssp"
            android:hint="@string/title_input_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title_password"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintTop_toBottomOf="@+id/tl_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="@dimen/_0sdp"
        app:boxStrokeWidthFocused="@dimen/_0sdp"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false"
        app:passwordToggleEnabled="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:maxLength="20"
            android:singleLine="true"
            android:inputType="textPassword"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/poppins_regular"
            android:textColorHint="@color/grey"
            android:paddingStart="@dimen/_24sdp"
            android:paddingTop="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_16sdp"
            android:textSize="@dimen/_16ssp"
            android:hint="@string/title_input_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="@dimen/_53sdp"
        android:background="@drawable/bg_rounded_primary"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/title_login"
        android:layout_margin="@dimen/_24sdp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>